  (Fixes CVE-2008-5498) (Scott)

- Fixed segfault when malformed string passed to json_decode(). (Scott)

- Fixed bug #46918 (imap_rfc822_parse_adrlist host part not filled in correctly).
  (Felipe)
- Fixed bug #46889 (Memory leak in strtotime()). (Derick)
- Fixed bug #46887 (Invalid calls to php_error_docref()).
  (oeriksson at mandriva dot com, Ilia)
- Fixed bug #46798 (Crash in mssql extension when retrieving a NULL value
  inside a binary or image column type). (Ilia)
- Fixed bug #46782 (fastcgi.c parse error). (Matt)
- Fixed bug #46748 (Segfault when an SSL error has more than one error). (Scott)
- Fixed bug #46739 (array returned by curl_getinfo should contain content_type key). 
  (Mikko)
- Fixed bug #46699 (xml_parse crash when parser is namespace aware). (Rob)
- Fixed bug #46005 (User not consistently logged under Apache2). 
  (admorten at umich dot edu, Stas)
- Fixed bug #45161 (Reusing a curl handle leaks memory). (Mark Karpeles, Jani)
- Fixed bug #35975 (Session cookie expires date format isn't the most compatible.
  Now matches that of setcookie()). (Scott)

08 Dec 2008, PHP 5.2.8
- Reverted bug fix #42718 that broke magic_quotes_gpc (Scott)

04 Dec 2008, PHP 5.2.7
- Upgraded PCRE to version 7.8 (Fixes CVE-2008-2371) (Ilia)
- Updated timezone database to version 2008.9. (Derick)
- Upgraded bundled libzip to 0.9.0. (Pierre)

- Added logging option for error_log to send directly to SAPI. (Stas)
- Added PHP_MAJOR_VERSION, PHP_MINOR_VERSION, PHP_RELEASE_VERSION,
  PHP_EXTRA_VERSION, PHP_VERSION_ID, PHP_ZTS and PHP_DEBUG constants. (Pierre)
- Added "PHP_INI_SCAN_DIR" environment variable which can be used to 
  either disable or change the compile time ini scan directory (FR #45114).
  (Jani)

- Fixed missing initialization of BG(page_uid) and BG(page_gid), 
  reported by Maksymilian Arciemowicz. (Stas)
- Fixed memory leak inside sqlite_create_aggregate(). (Felipe)
- Fixed memory leak inside PDO sqlite's sqliteCreateAggregate() method.
  (Felipe)